End exercise number 8

--- a/css/style.css
+++ b/css/style.css
@@ -21,13 +21,19 @@
     border-radius: 50%;
     padding: 0.25rem 0.5rem;
     background-color: #faf0e1;
-    
+    text-decoration: none;
+    cursor: pointer;
+    color: #414040; 
 }
 
 .number_contain{
     position: absolute;
     top: 20%;
     right: 2%;
+}
+
+.number:active{
+    background-color: #2cdfff90;
 }
 /* end Header */
 
