--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@
     border: 0.1rem solid #414040;
     border-radius: 50%;
     padding: 0.25rem 0.5rem;
+    margin-left: 1rem;
     background-color: #faf0e1;
     text-decoration: none;
     cursor: pointer;
